# garb

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: bench.yml  ci.yml
benches/: deinterleave.rs  packed_1010102.rs  swizzle.rs
benchmarks/: packed_1010102_2026-04-22.txt
src/: bytes.rs  deinterleave.rs  img.rs  imgref.rs  lib.rs  swizzle.rs  typed.rs  typed_rgb.rs
src/bytes/: avx2.rs  mod.rs  neon.rs  packed.rs  packed_1010102.rs  scalar.rs  tests.rs  wasm.rs
tests/: asm_inline_check.rs  readme_examples.rs
