[package]
name = "garb"
version = "0.2.5"
edition = "2024"
rust-version = "1.89"
authors = ["Lilith River <lilith@imazen.io>"]
description = "Dress your pixels for the occasion — SIMD-optimized pixel format conversions"
license = "MIT OR Apache-2.0"
keywords = ["pixel", "swizzle", "bgra", "rgba", "simd"]
categories = ["graphics", "multimedia::images", "no-std"]
repository = "https://github.com/imazen/garb"
readme = "README.md"

[dependencies]
archmage = { version = "0.9.14", features = ["macros"] }
bytemuck = { version = "1", features = ["derive", "extern_crate_alloc"] }
paste = { version = "1", optional = true }
rgb = { version = "0.8", features = ["bytemuck"], optional = true }
imgref = { version = "1", optional = true }

[dev-dependencies]
archmage = { version = "0.9.14", features = ["testable_dispatch"] }
rgb = { version = "0.8", features = ["bytemuck"] }
imgref = "1"
criterion = { version = "0.8", default-features = false, features = ["plotters", "html_reports"] }
zenbench = "0.1.7"

[[bench]]
name = "swizzle"
harness = false

[[bench]]
name = "packed_1010102"
harness = false

[features]
default = ["std"]
std = ["archmage/std"]
experimental = ["dep:paste"]
rgb = ["dep:rgb"]
imgref = ["dep:imgref", "rgb"]

